--- a/package.json
+++ b/package.json
@@ -8,17 +8,8 @@
     "dev": "tsx watch src/main.ts",
     "build": "tsc -p tsconfig.build.json",
     "start": "node dist/main.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:integration": "jest --testPathPattern=integration",
-    "test:e2e": "jest --testPathPattern=e2e",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint src --ext .ts --fix",
-    "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
-    "health": "curl -f http://localhost:3001/health || exit 1",
-    "db:seed": "tsx scripts/seed.ts",
-    "db:migrate": "tsx scripts/migrate.ts"
+    "lint": "eslint src --ext .ts --fix"
   },
   "keywords": [
     "fastify",
@@ -32,57 +23,36 @@
   "author": "LabLoop Team",
   "license": "PROPRIETARY",
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "node": ">=20.0.0"
   },
   "dependencies": {
-    "fastify": "^5.0.0",
-    "@fastify/swagger": "^9.0.0",
-    "@fastify/swagger-ui": "^5.0.0",
-    "@fastify/cors": "^9.0.0",
-    "@fastify/helmet": "^11.0.0",
-    "@fastify/rate-limit": "^9.0.0",
-    "@fastify/jwt": "^8.0.0",
+    "@fastify/compress": "^7.0.3",
+    "@fastify/cookie": "^10.0.1",
+    "@fastify/cors": "^9.0.1",
+    "@fastify/env": "^4.4.0",
+    "@fastify/formbody": "^7.4.0",
+    "@fastify/helmet": "^11.1.1",
+    "@fastify/jwt": "^8.0.1",
     "@fastify/mongodb": "^8.0.0",
-    "@fastify/env": "^4.0.0",
-    "@fastify/multipart": "^8.0.0",
-    "@fastify/cookie": "^10.0.0",
-    "@fastify/compress": "^7.0.0",
-    "@fastify/formbody": "^7.0.0",
-    "mongoose": "^8.0.0",
-    "bcrypt": "^5.0.0",
-    "jsonwebtoken": "^9.0.0",
-    "pino": "^8.0.0",
-    "pino-pretty": "^11.0.0",
-    "ajv": "^8.0.0",
-    "ajv-formats": "^3.0.0",
-    "uuid": "^10.0.0",
-    "date-fns": "^3.0.0",
-    "zod": "^3.0.0",
-    "reflect-metadata": "^0.2.0",
-    "inversify": "^6.0.0",
-    "class-validator": "^0.14.0",
-    "class-transformer": "^0.5.0"
+    "@fastify/multipart": "^8.3.1",
+    "@fastify/rate-limit": "^9.1.0",
+    "@fastify/swagger": "^9.5.1",
+    "@fastify/swagger-ui": "^5.2.3",
+    "fastify": "^5.6.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.0",
+    "pino": "^8.21.0",
+    "pino-pretty": "^11.3.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.0",
-    "@types/uuid": "^10.0.0",
-    "@types/jest": "^29.0.0",
-    "@types/supertest": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
-    "eslint": "^8.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.0.0",
-    "typescript": "^5.0.0",
-    "tsx": "^4.0.0",
-    "jest": "^29.0.0",
-    "ts-jest": "^29.0.0",
-    "supertest": "^7.0.0",
-    "mongodb-memory-server": "^9.0.0",
-    "@testcontainers/mongodb": "^10.0.0"
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.19.13",
+    "@typescript-eslint/eslint-plugin": "^8.42.0",
+    "@typescript-eslint/parser": "^8.42.0",
+    "eslint": "^9.35.0",
+    "tsx": "^4.20.5",
+    "typescript": "^5.9.2"
   }
 }
