--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "LabLoop Healthcare Lab Management System - High-performance Fastify backend with clean architecture",
   "type": "module",
-  "main": "dist/main.js",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "tsx watch src/main.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.build.json",
-    "start": "node dist/main.js",
+    "start": "node dist/index.js",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src --ext .ts --fix"
   },
@@ -26,29 +26,29 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
-    "@fastify/compress": "^7.0.3",
-    "@fastify/cookie": "^10.0.1",
-    "@fastify/cors": "^9.0.1",
-    "@fastify/env": "^4.4.0",
-    "@fastify/formbody": "^7.4.0",
-    "@fastify/helmet": "^11.1.1",
-    "@fastify/jwt": "^8.0.1",
-    "@fastify/mongodb": "^8.0.0",
-    "@fastify/multipart": "^8.3.1",
-    "@fastify/rate-limit": "^9.1.0",
+    "@fastify/compress": "^8.1.0",
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/cors": "^11.1.0",
+    "@fastify/env": "^5.0.2",
+    "@fastify/formbody": "^8.0.2",
+    "@fastify/helmet": "^13.0.1",
+    "@fastify/jwt": "^10.0.0",
+    "@fastify/mongodb": "^9.0.2",
+    "@fastify/multipart": "^9.2.1",
+    "@fastify/rate-limit": "^10.3.0",
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
+    "dotenv": "^17.2.2",
     "fastify": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
-    "pino": "^8.21.0",
-    "pino-pretty": "^11.3.0",
-    "zod": "^3.25.76"
+    "pino": "^9.9.4",
+    "pino-pretty": "^13.1.1",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20.19.13",
+    "@types/node": "^24.3.1",
     "@typescript-eslint/eslint-plugin": "^8.42.0",
     "@typescript-eslint/parser": "^8.42.0",
     "eslint": "^9.35.0",
