--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@fastify/swagger-ui": "^5.2.3",
     "dotenv": "^17.2.2",
     "fastify": "^5.6.0",
+    "jiti": "^2.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "pino": "^9.9.4",
@@ -52,7 +53,9 @@
     "@typescript-eslint/eslint-plugin": "^8.42.0",
     "@typescript-eslint/parser": "^8.42.0",
     "eslint": "^9.35.0",
+    "globals": "^16.3.0",
     "tsx": "^4.20.5",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.43.0"
   }
 }
