--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc -p tsconfig.build.json",
     "start": "node dist/index.js",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint src --ext .ts --fix"
+    "lint": "eslint src --ext .ts --fix",
+    "seed:superadmin": "tsx src/scripts/createSuperAdmin.ts"
   },
   "keywords": [
     "fastify",
