--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@fastify/mongodb": "^9.0.2",
     "@fastify/multipart": "^9.2.1",
     "@fastify/rate-limit": "^10.3.0",
+    "@types/uuid": "^10.0.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.2",
     "fastify": "^5.6.0",
@@ -45,6 +46,7 @@
     "mongoose": "^8.18.0",
     "pino": "^9.9.4",
     "pino-pretty": "^13.1.1",
+    "uuid": "^13.0.0",
     "zod": "^4.1.5"
   },
   "devDependencies": {
